# pio-cubemx

./: cppcheck.suppress  cubemx.ioc  platformio.ini  pyproject.toml  readme.md  stm32pio.ini
